--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>loging page</title>
 </head>
 <body>
-    
+    <h1 class="main__title">
+        Hello World!
+    </h1>
 
     <script src="script.js"></script>
 </body>
