--- a/logout.html
+++ b/logout.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <!-- ready to use :D💖 -->
-
+    <h2 class="user">'name' <img src="./images/icons/user-account.png" alt=""></h2>
+    <a href="#" class="logout">logout</a>
     <script src="script.js"></script>
 </body>
 </html>
