input type fixed, added password check

--- a/signup.html
+++ b/signup.html
@@ -13,13 +13,13 @@
     <form action="">
         <div class="two-columns">
             <div class="input-text-first-name input">
-                <input type="input" placeholder="first name">
+                <input type="text" placeholder="first name">
                 <img src="./images/icons/bxs-user-detail.png" alt="">
                 <p class="password-error-message hidden"></p>
 
             </div>
             <div class="input-text-last-name input">
-                <input type="email" placeholder="last name">
+                <input type="text" placeholder="last name">
                 <img src="./images/icons/bxs-user-detail.png" alt="">
                 <p class="password-error-message hidden"></p>
             </div>
@@ -33,6 +33,11 @@
             
             <div class="input-text-password input">
                 <input type="password" placeholder="Password">
+                <img src="./images/icons/bxs-lock.png" alt="lock icon">
+                <p class="password-error-message hidden"></p>
+            </div>
+            <div class="input-text-password input">
+                <input type="password" placeholder="Password check">
                 <img src="./images/icons/bxs-lock.png" alt="lock icon">
                 <p class="password-error-message hidden"></p>
             </div>
