--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- ready to use :D💖 -->
-
+    <div class="container">
     <form action="">
         <p class="submit-error-on-top"></p>
         <div class="two-columns">
@@ -46,7 +46,7 @@
     
             <button class="signup-button" onclick="signupSubmitButton(event)">Submit</button>
         </form>
-
+</div>
     <script src="script.js"></script>
 </body>
 </html>
