--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,54 @@
     <title>APO Business</title>
 </head>
 <body>
+    <style>
+        
+*{
+    box-sizing: border-box;
+}
+body{
+    width: 90%;
+    min-height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:hsl(243, 57%, 50%) ;
+}
+h1{
+    margin-bottom: 0;
+}
+.container{
+    width: 90%;
+    height: 100%;
+    max-width: 600px;
+    max-width: 900px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color:hsl(243, 50%, 55%) ;
+    border-radius: 15px;
+}
+button{
+    border: 0;
+    padding: .5em 1.5em;
+    color: hsl(243, 57%, 50%);
+    font-weight: 700;
+    background-color: hsl(64, 100%, 55%);
+    border-radius: 5px;
+    transition: transform 200ms;
+    cursor: pointer;
+}
+button:hover,
+button:focus{
+    background-color: hsl(243, 57%, 50%);
+    border: 1px solid hsl(64, 100%, 55%);
+    color: hsl(64, 100%, 55%);
+    transform: scale(1.1);
+
+}
+    </style>
     <!-- ready to use :D💖 -->
     <div class="container">
     <form action="">
