Login link fixed

--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@ button:focus{
 <div class="container signup">
     <div class="container-inner">
 
-        <p class="account">Already Have an account? <a href="./index.html" class="link" onclick="">Sign up</a></p>
+        <p class="account">Already Have an account? <a href="./index.html" class="link" onclick="">Log in</a></p>
         <h1>AOP SIGN UP</h1>
 
         <form action="">
